--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,22 @@
-.Map{
+.Container{
   display: flex;
+  align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  background: black;
+
+}
+.Map{
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   padding-top: 20px;
-  background: black;
 }
+
 .Title{
   color:wheat;
-  margin-bottom: 20px;
-  font-size: 30px;
-  font-weight: 200;
+  margin: 20px 0 0 20px;
 }
+
