--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,24 @@
   margin: 20px 0 0 20px;
 }
 
+
+.Score{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  font-size: 25px;
+  margin-right: 450px;
+  
+}
+.ScoreIcon{
+  width:20px;
+  height:20px;
+}
+
+.BlueScore{
+  color:royalblue;
+}
+
+.RedScore{
+  color: red;
+}
